--- a/design-pro/src/index.css
+++ b/design-pro/src/index.css
@@ -1,11 +1,11 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300ita‌​lic,400italic,500,500italic,700,700italic,900italic,900);
 * {
   font-family: "Roboto", sans-serif;
-  box-sizing: border-box;
+
 }
-html { overflow-x: hidden;
+html { 
   overflow-y: scroll;
-  min-height: 100%; }
+  }
 
 body {
   background: rgb(0, 0, 0);
@@ -13,9 +13,6 @@ body {
   background-size: cover;
   padding:0px;
   margin:0px;
-
-  height: 100%;
-
 }
 
 .container {
@@ -29,7 +26,8 @@ body {
   grid-template-rows: 20% auto 5%;
   width: 100vw;
   height: 100vh;
-  margin-top: -6%;
+  margin-top: -3%;
+  
 }
 
 .container-bienvenida {
@@ -44,6 +42,7 @@ body {
   width: 100vw;
   height: 100vh;
   margin-top: -5%;
+  
 }
 
 .cuadro-bienvenida {
@@ -57,6 +56,8 @@ body {
   grid-column-end: 3;
   grid-row-end: 3;
   min-width: 100%;
+  box-sizing: border-box;
+
 }
 
 .logo-redimensionado {
@@ -70,9 +71,9 @@ body {
 }
 
 .hr-bienvenida {
-  width: 55%;
-  border: 1px solid rgb(31, 31, 31);
-  margin-top: -3%;
+  border: solid 1px #000000;
+  margin-bottom: 10px;
+  width: 50%; margin: auto;
 }
 
 .input-datos {
@@ -276,9 +277,9 @@ body {
 }
 
 .hr-proyecto {
-  border: 1px solid #000000;
-  width: 45%;
-  margin-top: -0.01%;
+  border: solid 1px #000000;
+  margin-bottom: 10px;
+  width: 50%; margin: auto;
 }
 
 .cuadro-proyecto-foto {
@@ -368,6 +369,7 @@ body {
     grid-column-end: 3;
     grid-row-end: 3;
     min-width: 100%;
+    box-sizing: border-box;
   }
 
   .container-perfil {
@@ -425,8 +427,9 @@ body {
   }
 
   .hr-bienvenida {
-    width: 55%;
-    border: 1px solid rgb(31, 31, 31);
+    border: solid 1px #000000;
+    margin-bottom: 10px;
+    width: 50%; margin: auto;
   }
 
   .input-bienvenida {
@@ -525,9 +528,9 @@ body {
   }
   
   .hr-proyecto {
-    border: 1px solid #000000;
-    width: 45%;
-    margin-top: -0.01%;
+    border: solid 1px #000000;
+    margin-bottom: 10px;
+    width: 50%; margin: auto;
   }
   
   .cuadro-proyecto-foto {
@@ -622,6 +625,8 @@ body {
     grid-column-end: span 3;
     grid-row-end: 3;
     min-width: 100%;
+    box-sizing: border-box;
+
   }
 
   .container-perfil {
@@ -681,8 +686,9 @@ body {
   }
 
   .hr-bienvenida {
-    width: 600px;
-    border: 1px solid rgb(31, 31, 31);
+    border: solid 1px #000000;
+    margin-bottom: 10px;
+    width: 50%; margin: auto;
   }
 
   .input-bienvenida {
@@ -780,9 +786,9 @@ body {
   }
   
   .hr-proyecto {
-    border: 1px solid #000000;
-    width: 45%;
-    margin-top: -0.01%;
+    border: solid 1px #000000;
+    margin-bottom: 10px;
+    width: 50%; margin: auto;
   }
   
   .cuadro-proyecto-foto {
@@ -868,7 +874,7 @@ body {
     grid-template-rows: 80% 20%;
     width: 100vw;
     height: 100vh;
-    padding-top: 0%;
+    padding-top: 5%;
   }
   
   .label-para-input {
@@ -878,9 +884,9 @@ body {
   }
   
   .hr-proyecto {
-    border: 1px solid #000000;
-    width: 45%;
-    margin-top: -0.01%;
+    border: solid 1px #000000;
+    margin-bottom: 10px;
+    width: 50%; margin: auto;
   }
   
   .cuadro-proyecto-foto {
@@ -999,11 +1005,14 @@ body {
     grid-column-end: span 3;
     grid-row-end: 3;
     min-width: 100%;
+    box-sizing: border-box;
+
   }
 
   .hr-bienvenida {
-    width: 300px;
-    border: 1px solid rgb(31, 31, 31);
+    border: solid 1px #000000;
+    margin-bottom: 10px;
+    width: 50%; margin: auto;
   }
   .logo-redimensionado {
     width: 20%;
@@ -1025,7 +1034,7 @@ body {
     grid-template-rows: 2% 32% 32% auto;
     width: 100vw;
     height: 100vh;
-    padding-top: 0%;
+    padding-top: 5%;
   }
 
   .cuadro-perfil-foto {
@@ -1166,6 +1175,8 @@ body {
     grid-column-end: span 3;
     grid-row-end: 3;
     min-width: 100%;
+    box-sizing: border-box;
+
   }
   .avatar {
     width: 70px;
@@ -1228,8 +1239,9 @@ body {
     box-shadow: inset 0px 0px 0px 3px #000000;
   }
   .hr-bienvenida {
-    width: 250px;
-    border: 1px solid rgb(31, 31, 31);
+    border: solid 1px #000000;
+    margin-bottom: 10px;
+    width: 50%; margin: auto;
   }
 
   .input-datos-fit {
@@ -1335,6 +1347,8 @@ body {
     grid-column-end: span 3;
     grid-row-end: 3;
     min-width: 100%;
+    box-sizing: border-box;
+
   }
   .avatar {
     width: 70px;
@@ -1398,8 +1412,9 @@ body {
     box-shadow: inset 0px 0px 0px 3px #000000;
   }
   .hr-bienvenida {
-    width: 250px;
-    border: 1px solid rgb(31, 31, 31);
+    border: solid 1px #000000;
+    margin-bottom: 10px;
+    width: 50%; margin: auto;
   }
 
   .input-datos-fit {
